5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1875_1724.log
== TEST (2019-07-02 18:11:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
t=0
m=array(eval(input("escreva o vetor com o valor das compras: ")))
for i in range(m):
	for j in range(m):
		t=t+dot(inv(i),j)
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:12:50) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("escreva o vetor com o valor das compras: ")))
t=0
for i in range(m):
	for j in range(m):
		t=t+dot(inv(m[i],m[j])
print(t)
-- ERROR:
File "XXXX", line 8
    print(t)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:13:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("escreva o vetor com o valor das compras: ")))
t=0
for i in range(m):
	for j in range(m):
		t=t+dot(inv(m[i],m[j])
print(t)
-- ERROR:
File "XXXX", line 8
    print(t)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:14:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("escreva o vetor com o valor das compras: ")))
n=0
for i in range(m):
	for j in range(m):
		n=n+dot(inv(m[i],m[j]))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:14:56) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("escreva o vetor com o valor das compras: ")))
n=0
for i in (m):
	for j in (m):
		n=n+dot(inv(m[i],m[j]))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:17:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("escreva o vetor com o valor das compras: ")))
n=0
for i in (m):
	n=n+dot(shape(quadrado)[0])
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:17:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("escreva o vetor com o valor das compras: ")))
n=0
for i in (m):
	n=n+dot(shape(m)[0])
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:19:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("escreva o vetor com o valor das compras: ")))
n=0
for i in (m):
	n=n+dot((shape(m)[0]),2)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:53:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("escreva o vetor com o valor das compras: ")))
n=0
for i in (m):
	
print(n)
-- ERROR:
File "XXXX", line 7
    print(n)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:53:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("escreva o vetor com o valor das compras: ")))
n=0
for i in (m):
	n=n+dot((shape(m)[0]),2)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:03:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("escreva o vetor com o valor das compras: ")))
l=shape(m)[0]
c=shape(m)[1]
t=0
for i in range(m):
	t=t+(m[i,0])*(m[i,1])
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:03:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("escreva o vetor com o valor das compras: ")))
l=shape(m)[0]
c=shape(m)[1]
t=0
for i in m:
	t=t+(m[i,0])*(m[i,1])
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:04:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("escreva o vetor com o valor das compras: ")))
l=shape(m)[0]
c=shape(m)[1]
t=0
for i in m:
	t=t+(l[i,0])*(c[i,1])
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:06:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("escreva o vetor com o valor das compras: ")))
l=shape(m)[0]
c=shape(m)[1]
t=0
for i in range(l):
	t=t+(m[i,0])*(m[i,1])
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:06:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("escreva o vetor com o valor das compras: ")))
l=shape(m)[0]
c=shape(m)[1]
t=0
for i in range(l):
	t=t+(m[i,0])*(m[i,1])
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:06:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("escreva o vetor com o valor das compras: ")))
l=shape(m)[0]
c=shape(m)[1]
t=0
for i in range(l):
	t=t+(m[i,0])*(m[i,1])
print(t)
-- EXECUTION TIME:
0.840894
-- TEST CASE 1:
---- input:
[[8.7,8.6],[5.3,8.0],[0.3,4.4]]
---- correct output:
118.54
---- user output:
118.53999999999999
-- TEST CASE 2:
---- input:
[[9.5,0.5],[1.4,5.3],[9.4,2.6]]
---- correct output:
36.61
---- user output:
36.61
-- TEST CASE 3:
---- input:
[[9.4,3.0],[3.9,6.2],[8.8,5.2],[2.1,2.0]]
---- correct output:
102.34
---- user output:
102.34000000000002
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:07:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("escreva o vetor com o valor das compras: ")))
l=shape(m)[0]
c=shape(m)[1]
t=0
for i in range(l):
	t=t+(m[i,0])*(m[i,1])
print(round(t, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:07:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("escreva o vetor com o valor das compras: ")))
l=shape(m)[0]
c=shape(m)[1]
t=0
for i in range(l):
	t=t+(m[i,0])*(m[i,1])
print(round(t, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:07:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("escreva o vetor com o valor das compras: ")))
l=shape(m)[0]
c=shape(m)[1]
t=0
for i in range(l):
	t=t+(m[i,0])*(m[i,1])
print(round(t, 2))
-- EXECUTION TIME:
1.11393
-- TEST CASE 1:
---- input:
[[8.7,8.6],[5.3,8.0],[0.3,4.4]]
---- correct output:
118.54
---- user output:
118.54
-- TEST CASE 2:
---- input:
[[9.5,0.5],[1.4,5.3],[9.4,2.6]]
---- correct output:
36.61
---- user output:
36.61
-- TEST CASE 3:
---- input:
[[9.4,3.0],[3.9,6.2],[8.8,5.2],[2.1,2.0]]
---- correct output:
102.34
---- user output:
102.34
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
